--- a/docs/fr/modules/main/functions/Headers.tex
+++ b/docs/fr/modules/main/functions/Headers.tex
@@ -178,7 +178,7 @@ encodée en premier (troisième paramètre) et le texte passé en quatrième arg
 La commande de ré-initialisation de décoration du terminal (définie dans les fichiers \textbf{\color{lime}Colors.conf\color{white}} et \textbf{\color{lime}Text.conf\color{white}}) est ensuite appelée pour réinitialiser la couleur d'affichage de texte selon la configuration du terminal.\\[1\baselineskip]
 
 \textbf{Utilisation :}\linebreak
-Appelez cette fonction pour afficher un texte entre deux lignes, et pour davantage personnaliser cet\linebreak affichage si vous ne trouvez pas votre compte parmi les fonctions proposées dans les sections suivantes :
+Appelez cette fonction pour afficher un texte entre deux lignes, et pour davantage personnaliser cet\linebreak affichage si vous ne trouvez pas votre compte parmi les fonctions proposées dans les sections\linebreak suivantes :
 \textbf{\color{green}Headers unicolores\color{white}} et \textbf{\color{green}Headers multicolores\color{white}}.\\[1\baselineskip]
 
 
