Adding a translation handler

--- a/lib/lang/lang.csv
+++ b/lib/lang/lang.csv
@@ -39,7 +39,7 @@ __BU_MAIN_MSG_CHECKSTAT_ConfEcho_ALLOWED_VAL_FLOAT_INT,Printing the acceptance o
 ,,,,
 ,,,,
 /,,,,
-__BU_MAIN_MSG_DECHO,,,,
+__BU_MAIN_MSG_DECHO_,,,,
 ,,,,
 ,,,,
 ,,,,
@@ -52,7 +52,7 @@ __BU_MAIN_MSG_DECHO,,,,
 ,,,,
 ,,,,
 /,,,,
-__BU_MAIN_MSG_ECHO,,,,
+__BU_MAIN_MSG_ECHO_,,,,
 ,,,,
 ,,,,
 ,,,,
@@ -62,7 +62,19 @@ __BU_MAIN_MSG_ECHO,,,,
 ,,,,
 ,,,,
 /,,,,
-__BU_MAIN_MSG_ERRORS,,,,
+__BU_MAIN_MSG_ERRORS_,,,,
+__BU_MAIN_MSG_ERRORS_HandleErrors_File_NO_FILE,No specified file path passed as file argument for the HandleErrors function,DechoHighlight,<no specified file path>,<aucun chemin de fichier spécifié>
+__BU_MAIN_MSG_ERRORS_HandleErrors_Function_NO_FUNCTION,No specified function name passed as function argument for the HandleErrors function,DechoHighlight,<no specified function name>,<aucun nom de fonction spécifié>
+__BU_MAIN_MSG_ERRORS_HandleErrors_Line_NO_LINE,No specified line number passed as line argument for the HandleErrors function,DechoHighlight,<no specified line number>,<aucun numéro de ligne spécifié>
+__BU_MAIN_MSG_ERRORS_HandleErrors_,,,,
+__BU_MAIN_MSG_ERRORS_HandleErrors_,,,,
+__BU_MAIN_MSG_ERRORS_HandleErrors_,,,,
+__BU_MAIN_MSG_ERRORS_HandleErrors_,,,,
+__BU_MAIN_MSG_ERRORS_HandleErrors_,,,,
+__BU_MAIN_MSG_ERRORS_HandleErrors_,,,,
+__BU_MAIN_MSG_ERRORS_HandleErrors_,,,,
+/,,,,
+__BU_MAIN_MSG_FILES_,,,,
 ,,,,
 ,,,,
 ,,,,
@@ -71,7 +83,7 @@ __BU_MAIN_MSG_ERRORS,,,,
 ,,,,
 ,,,,
 /,,,,
-__BU_MAIN_MSG_FILES,,,,
+__BU_MAIN_MSG_HEADERS_,,,,
 ,,,,
 ,,,,
 ,,,,
@@ -80,16 +92,7 @@ __BU_MAIN_MSG_FILES,,,,
 ,,,,
 ,,,,
 /,,,,
-__BU_MAIN_MSG_HEADERS,,,,
-,,,,
-,,,,
-,,,,
-,,,,
-,,,,
-,,,,
-,,,,
-/,,,,
-__BU_MAIN_MSG_LANG,,,,
+__BU_MAIN_MSG_LANG_,,,,
 ,,,,
 ,,,,
 ,,,,
@@ -97,7 +100,7 @@ __BU_MAIN_MSG_LANG,,,,
 ,,,,
 ,,,,
 /,,,,
-__BU_MAIN_MSG_PERM,,,,
+__BU_MAIN_MSG_PERM_,,,,
 ,,,,
 ,,,,
 ,,,,
@@ -116,7 +119,7 @@ __BU_MAIN_MSG_PERM,,,,
 ,,,,
 ,,,,
 /,,,,
-__BU_MAIN_MSG_TEXT,,,,
+__BU_MAIN_MSG_TEXT_,,,,
 ,,,,
 ,,,,
 ,,,,
@@ -125,4 +128,4 @@ __BU_MAIN_MSG_TEXT,,,,
 ,,,,
 ,,,,
 /,,,,
-__BU_MAIN_MSG_TIME,,,,
+__BU_MAIN_MSG_TIME_,,,,
