--- a/lib/lang/lang.csv
+++ b/lib/lang/lang.csv
@@ -93,11 +93,11 @@ __BU_MAIN_MSG_HEADERS_,,,,
 ,,,,
 /,,,,
 __BU_MAIN_MSG_LANG_,,,,
-,,,,
-,,,,
-,,,,
-,,,,
-,,,,
+__BU_MAIN_MSG_LANG_CheckNotTranslated_ParseCSVLang_NO_PATH,"No specified translation file path passed as file argument for the ""CheckNotTranslated_ParseCSVLang()""  function",,Please pass the path of the translations CVS file to parse as first argument,
+__BU_MAIN_MSG_LANG_CheckNotTranslated_ParseCSVLang_BAD_PATH,"invalid path passed as file argument for the ""CheckNotTranslated_ParseCSVLang()""  function",,Please pass the valid path of the translations CVS file to parse as first argument,
+__BU_MAIN_MSG_LANG_CheckNotTranslated_ParseCSVLang_NO_LANG,No ISO 639-1 language’s code passed as language’s argument,,Please pass the ISO 639-1 language's code to fetch as second argument,
+__BU_MAIN_MSG_LANG_CheckNotTranslated_ParseCSVLang_NO_SUCC_MSG,,,Please pass the success message of your language as third argument,
+__BU_MAIN_MSG_LANG_CheckNotTranslated_ParseCSVLang_NO_ERR_MSG,,,Please pass the error message of your language as fourth argument,
 ,,,,
 /,,,,
 __BU_MAIN_MSG_PERM_,,,,
