--- a/lib/lang/lang.csv
+++ b/lib/lang/lang.csv
@@ -66,10 +66,10 @@ __BU_MAIN_MSG_ERRORS_,,,,
 __BU_MAIN_MSG_ERRORS_HandleErrors_File_NO_FILE,No specified file path passed as file argument for the HandleErrors function,DechoHighlight,<no specified file path>,<aucun chemin de fichier spécifié>
 __BU_MAIN_MSG_ERRORS_HandleErrors_Function_NO_FUNCTION,No specified function name passed as function argument for the HandleErrors function,DechoHighlight,<no specified function name>,<aucun nom de fonction spécifié>
 __BU_MAIN_MSG_ERRORS_HandleErrors_Line_NO_LINE,No specified line number passed as line argument for the HandleErrors function,DechoHighlight,<no specified line number>,<aucun numéro de ligne spécifié>
-__BU_MAIN_MSG_ERRORS_HandleErrors_,,,,
-__BU_MAIN_MSG_ERRORS_HandleErrors_,,,,
-__BU_MAIN_MSG_ERRORS_HandleErrors_,,,,
-__BU_MAIN_MSG_ERRORS_HandleErrors_,,,,
+__BU_MAIN_MSG_HandleErrors_FATAL_ERROR_OCCURED_SAFEMODE,A fatal error occured while the program was in safe mode or initilalizing,,,
+__BU_MAIN_MSG_HandleErrors_FATAL_ERROR_OCCURED,A fatal error occured,,,
+__BU_MAIN_MSG_HandleErrors_ERROR_OCCURED_SAFEMODE,An error occured while the program was in safe mode or initilalizing,,,
+__BU_MAIN_MSG_HandleErrors_ERROR_OCCURED,An error occured,,,
 __BU_MAIN_MSG_ERRORS_HandleErrors_,,,,
 __BU_MAIN_MSG_ERRORS_HandleErrors_,,,,
 __BU_MAIN_MSG_ERRORS_HandleErrors_,,,,
