Updating the French tutorials documentation

--- a/docs/fr/Tutos.tex
+++ b/docs/fr/Tutos.tex
@@ -9,7 +9,7 @@
 \usepackage{fancyhdr}						%
 \usepackage[document]{ragged2e}								% Justification du texte.
 \usepackage[a4paper,margin=1in,footskip=0.25in]{geometry}	% Mise en page du document.					%
-\usepackage{hyperref}
+\usepackage{hyperref}                                       % Pour permettre la création de liens.
 
 \fontfamily{}
 
@@ -50,13 +50,20 @@
 
 \color{blue}
 \subsubsection{Fichiers à éditer}\color{white}
+\begin{itemize}
+    \item \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}}
+\end{itemize}
 
+
+% -----------------------------------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{Consignes}\color{white}
 
+
+% -----------------------------------------------
 
 \color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
@@ -65,12 +72,146 @@
 
 \color{blue}
 \subsubsection{Fichiers à éditer}\color{white}
+\begin{itemize}
+    \item \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}}
+\end{itemize}
 
+
+% -----------------------------------------------
 
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{Consignes}\color{white}
+
+
+% -----------------------------------------------
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{green}
+\subsection{Ajouter une nouvelle couleur}\color{white}
+
+\color{blue}
+\subsubsection{Fichiers de configuration à éditer}\color{white}
+\begin{itemize}
+    \item \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/module/main/colors.conf}
+\end{itemize}
+
+
+% -----------------------------------------------
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{blue}
+\subsubsection{Fichiers de librairie à éditer}\color{white}
+\begin{itemize}
+    \item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/function/main/Headers.lib}
+\end{itemize}
+
+
+% -----------------------------------------------
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{blue}
+\subsubsection{Consignes}\color{white}
+Dans le fichier \textbf{\color{lime}colors.conf}, repérez la section \textbf{COLOR ENCODING}, puis ajoutez une variable,\linebreak de préférence nommée \textbf{\color{orange}\_\_BU\_MAIN\_COLOR\_CODE\_<\$nom\_de\_la\_couleur\_en\_anglais>}, suivie de son code de la table des couleurs de la commande \textbf{\color{gray}tput setaf}.\\[1\baselineskip]
+
+Pour plus d'informations concernant les valeurs de cette table, veuillez cliquer sur le lien ci-dessous :\linebreak
+\url{https://unix.stackexchange.com/questions/269077/tput-setaf-color-table-how-to-determine-color-codes/269085#269085}
+
+
+% -----------------------------------------------
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{green}
+\subsection{\$\_TITRE}\color{white}
+
+\color{blue}
+\subsubsection{Fichiers à éditer}\color{white}
+\begin{itemize}
+    \item \textbf{\color{lime}}
+\end{itemize}
+
+
+% -----------------------------------------------
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{blue}
+\subsubsection{Consignes}\color{white}
+
+
+% -----------------------------------------------
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{green}
+\subsection{\$\_TITRE}\color{white}
+
+\color{blue}
+\subsubsection{Fichiers à éditer}\color{white}
+\begin{itemize}
+    \item \textbf{\color{lime}}
+\end{itemize}
+
+% -----------------------------------------------
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{blue}
+\subsubsection{Consignes}\color{white}
+
+
+% -----------------------------------------------
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{green}
+\subsection{\$\_TITRE}\color{white}
+
+\color{blue}
+\subsubsection{Fichiers à éditer}\color{white}
+\begin{itemize}
+    \item \textbf{\color{lime}\color{white}}
+\end{itemize}
+
+
+% -----------------------------------------------
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{blue}
+\subsubsection{Consignes}\color{white}
+
+
+% -----------------------------------------------
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{green}
+\subsection{\$\_TITRE}\color{white}
+
+\color{blue}
+\subsubsection{Fichiers à éditer}\color{white}
+\begin{itemize}
+    \item \textbf{\color{lime}\color{white}}
+\end{itemize}
+
+
+% -----------------------------------------------
+
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{blue}
+\subsubsection{Consignes}\color{white}
+
+
+% -----------------------------------------------
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \end{document}
 
